fixes formatting and previously searched city spacing.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -9,6 +9,10 @@
     padding-top: 1%;
 }
 
+p {
+    font-size: 18px;
+}
+
 .col-3 {
     height: 100vh;
     background-color: rgb(243, 243, 243);
@@ -33,12 +37,13 @@
     width: 100%;
     height: 30px;
     margin-top: 5px;
-    margin-bottom: 5px;
 }
 
 #cityButton {
     width: 100%;
     height: 10%;
+    margin-bottom: 7px;
+    border-radius: 5px;
 }
 
 #city {
@@ -51,24 +56,28 @@
     margin-bottom: 20px;
 }
 
+#currentWeather {
+    margin-bottom: 25px;
+}
+
 .low {
     background-color: green;
-    width: 8%;
+    width: 10%;
 }
 
 .moderate {
     background-color: yellow;
-    width: 8%;
+    width: 10%;
 }
 
 .high {
     background-color: orange;
-    width: 8%;
+    width: 10%;
 }
 
 .severe {
     background-color: red;
-    width: 8%;
+    width: 10%;
 }
 
 #forecastDisplay {
